--- a/src/Homage.html
+++ b/src/Homage.html
@@ -5,85 +5,98 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Homage</title>
+    <link rel="stylesheet" href="bootstrap.min.css">
+
 </head>
 
 <body>
-    <header>
-        <!-- image to be avatar and description -->
-        <img src="images/bemnet_a.jpg" alt="b_avatar">
-        <!-- description as p tag -->
-        <p>Much more than that</p>
-        <nav>
-            <ul>
-                <li><a href="Home.html">Home</a></li>
-                <li><a href="Resume.html">Resume</a></li>
-                <li><a href="AboutMe.html">About</a></li>
-                <li><a href="Contact.html">Contact</a></li>
-                <li><a href="Homage.html">Homage</a></li>
+    <header class="row">
+        <div class="col-sm">
+            <!-- image to be avatar and description -->
+            <img src="images/bemnet_a.jpg" alt="b_avatar" class="rounded-circle img-custom-size" width="100"
+                height="100">
+            <!-- description as p tag -->
+            <p class="d-inline"><em>--"Much more than that"--</em>
+            </p>
+        </div>
+        <nav class="col-sm mt-2 p-1">
+            <ul class="row list-unstyled">
+                <li class="col"><a href="Home.html">Home</a></li>
+                <li class="col"><a href="Resume.html">Resume</a></li>
+                <li class="col"><a href="AboutMe.html">About</a></li>
+                <li class="col"><a href="Contact.html">Contact</a></li>
+                <li class="col"><a href="Homage.html">Homage</a></li>
             </ul>
         </nav>
     </header>
-    <main>
-        <section>
-            <h2>Why this page?</h2>
-            <p>This page is dedicated to credit people who had led me down the right path and keep providing guidance
+    <main class="container">
+        <section class="text-center">
+            <h2 class="text-primary">Why this page?</h2>
+            <p class="lead">This page is dedicated to credit people who had led me down the right path and keep
+                providing guidance
                 and LOVE again and again.</p>
         </section>
-        <section>
-            <figure>
+        <section class="row">
+            <figure class="col-sm">
                 <!-- Image styled as avatar(rounded) -->
                 <img src="images/mother.jpg" alt="mother">
                 <figcaption>Tiruwork Lakew</figcaption>
             </figure>
-            <hgroup>
-                <h2>My mother</h2>
+            <hgroup class="col-sm text-center">
+                <h2 class="text-primary">My mother</h2>
                 <p>She is strong woman. She is my lantern when I feel lost. I hope I will have the chance to make her
                     dream life come true.</p>
             </hgroup>
         </section>
-        <section>
-            <figure>
+        <section class="row">
+            <figure class="col-sm">
                 <!-- Image styled as avatar(rounded) -->
                 <img src="images/father.jpg" alt="father">
                 <figcaption>Aschalew Wodaj</figcaption>
             </figure>
-            <hgroup>
-                <h2>My Father</h2>
+            <hgroup class="col-sm text-center">
+                <h2 class="text-primary">My Father</h2>
                 <p>He is one of a kind. He raised me with discipline and above all LOVE.</p>
             </hgroup>
         </section>
-        <section>
-            <figure>
+        <section class="row text-center">
+            <figure class="col-sm">
                 <!-- Image styled as avatar(rounded) -->
-                <img src="images/Betty.JPG" alt="Betty">
+                <img src="images/Betty.JPG" alt="Betty" width="220" height="220" class="rounded-circle">
                 <figcaption>Betelhem Aschalew</figcaption>
             </figure>
-            <hgroup>
-                <h2>My Sister</h2>
+            <hgroup class="col-sm">
+                <h2 class="text-primary">My Sister</h2>
                 <p>She is someone who paid a lot of sacrifices for me to be here. She was constantly worried by the time
                     I was struggling and She still is. I hope all the good things in the world to happen to her.</p>
             </hgroup>
         </section>
     </main>
-    <footer>
-        <article>
-            <h2>About this website</h2>
-            This website is made as part of a project for Web Programming Course. I had fun doing. I hope you do too
-            enjoying it.
+    <footer class="mt-4 p-3">
+        <article class="text-center">
+            <h2 class="text-primary">About this website</h2>
+            <p>
+                This website is made as part of a project for Web Programming Course. I had fun doing. I hope you do too
+                enjoying it.</p>
         </article>
 
-        <section>
-            <h2>Grasp the know-how!</h2>
-
+        <section class="text-center">
+            <h2 class="h4">Grasp the know-how!</h2>
             <p>The concepts used to develop this website are: <br></p>
             <nav>
-                <ul>
-                    <li><a href="https://www.w3schools.com/html/default.asp">HTML Basics</a></li>
-                    <li><a href="https://www.w3schools.com/html/html5_semantic_elements.asp">HTML Semantics</a></li>
-                    <li><a href="https://www.w3schools.com/css/css_intro.asp">CSS Basics</a></li>
-                    <li><a href="https://www.w3schools.com/css/css3_flexbox.asp">CSS Flex</a></li>
-                    <li><a href="https://www.w3schools.com/css/css_grid.asp">CSS Grid</a></li>
-                    <li><a
+                <ul class="row list-unstyled">
+                    <li class="col-sm text-center"><a href="https://www.w3schools.com/html/default.asp">HTML Basics</a>
+                    </li>
+                    <li class="col-sm text-center"><a
+                            href="https://www.w3schools.com/html/html5_semantic_elements.asp">HTML
+                            Semantics</a></li>
+                    <li class="col-sm text-center"><a href="https://www.w3schools.com/css/css_intro.asp">CSS Basics</a>
+                    </li>
+                    <li class="col-sm text-center"><a href="https://www.w3schools.com/css/css3_flexbox.asp">CSS Flex</a>
+                    </li>
+                    <li class="col-sm text-center"><a href="https://www.w3schools.com/css/css_grid.asp">CSS Grid</a>
+                    </li>
+                    <li class="col-sm text-center"><a
                             href="https://www.wix.com/blog/how-to-design-a-website#:~:text=How%20to%20design%20a%20website%201%2001.%20Set,...%207%2007.%20Design%20your%20website%20elements%20">Design
                             Principles</a></li>
 
@@ -100,4 +113,5 @@
     </footer>
 
 </body>
+
 </html>
