--- a/src/Portfolio.html
+++ b/src/Portfolio.html
@@ -5,71 +5,86 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Portfolio</title>
+    <link rel="stylesheet" href="bootstrap.min.css">
 </head>
 
 <body>
-    <header>
-        <!-- image to be avatar and description -->
-        <img src="images/bemnet_a.jpg" alt="b_avatar">
-        <!-- description as p tag -->
-        <p>Much more than that</p>
-        <nav>
-            <ul>
-                <li><a href="Home.html">Home</a></li>
-                <li><a href="Resume.html">Resume</a></li>
-                <li><a href="AboutMe.html">About</a></li>
-                <li><a href="Contact.html">Contact</a></li>
-                <li><a href="Homage.html">Homage</a></li>
+    <header class="row">
+        <div class="col-sm">
+            <!-- image to be avatar and description -->
+            <img src="images/bemnet_a.jpg" alt="b_avatar" class="rounded-circle img-custom-size" width="100"
+                height="100">
+            <!-- description as p tag -->
+            <p class="d-inline"><em>--"Much more than that"--</em>
+            </p>
+        </div>
+        <nav class="col-sm mt-2 p-1">
+            <ul class="row list-unstyled">
+                <li class="col"><a href="Home.html">Home</a></li>
+                <li class="col"><a href="Resume.html">Resume</a></li>
+                <li class="col"><a href="AboutMe.html">About</a></li>
+                <li class="col"><a href="Contact.html">Contact</a></li>
+                <li class="col"><a href="Homage.html">Homage</a></li>
             </ul>
         </nav>
     </header>
-    <main>
-        <section>
-            <hgroup>
-                <!-- Preferrable heading should be selected -->
-                <h2>Project 1</h2>
-                <p>Here is my first project</p>
-            </hgroup>
-            <!-- See Project... styled like the wireframe -->
-            <a href="https://lnkd.in/eGtVaT4d">See Project 1</a>
-        </section>
+    <div class="row">
+        <main class="col-sm">
+            <section class="text-center">
+                <hgroup>
+                    <!-- Preferrable heading should be selected -->
+                    <h2 class="h3 text-primary">Project 1</h2>
+                    <p>Here is my first project</p>
+                </hgroup>
+                <!-- See Project... styled like the wireframe -->
+                <a href="https://lnkd.in/eGtVaT4d" class="btn btn-outline-primary">See Project 1</a>
+            </section>
 
-        <section>
-            <hgroup>
-                <!-- Preferrable heading should be selected -->
-                <h2>Project 2</h2>
-                <p>Here is my second project</p>
-            </hgroup>
-            <!-- See Project... styled like the wireframe -->
-            <a href="https://lnkd.in/e24Vkqvp">See Project 2</a>
-        </section>
+            <section class="text-center mt-4">
+                <hgroup>
+                    <!-- Preferrable heading should be selected -->
+                    <h2 class="h3 text-primary">Project 2</h2>
+                    <p>Here is my second project</p>
+                </hgroup>
+                <!-- See Project... styled like the wireframe -->
+                <a href="https://lnkd.in/e24Vkqvp" class="btn btn-outline-primary">See Project 2</a>
+            </section>
 
-    </main>
-    <aside>
-        <p>If you want to know more about me, Click the link below</p>
-        <!-- link styled as button -->
-        <a href="https://www.linkedin.com/in/bemnet-aschalew-9868a2295/">Know Me</a>
-    </aside>
-
-    <footer>
-        <article>
-            <h2>About this website</h2>
-            This website is made as part of a project for Web Programming Course. I had fun doing. I hope you do too
-            enjoying it.
+        </main>
+        <div class="col-sm container mt-4">
+            <aside class="bg-light-subtle border border-primary rounded text-center p-3">
+                <p>If you want to know more about me, Click the link below</p>
+                <!-- link styled as button -->
+                <a href="https://www.linkedin.com/in/bemnet-aschalew-9868a2295/" class="btn btn-outline-primary">Know
+                    Me</a>
+            </aside>
+        </div>
+    </div>
+    <footer class="mt-4 p-3">
+        <article class="text-center">
+            <h2 class="text-primary">About this website</h2>
+            <p>
+                This website is made as part of a project for Web Programming Course. I had fun doing. I hope you do too
+                enjoying it.</p>
         </article>
 
-        <section>
-            <h2>Grasp the know-how!</h2>
-
+        <section class="text-center">
+            <h2 class="h4">Grasp the know-how!</h2>
             <p>The concepts used to develop this website are: <br></p>
             <nav>
-                <ul>
-                    <li><a href="https://www.w3schools.com/html/default.asp">HTML Basics</a></li>
-                    <li><a href="https://www.w3schools.com/html/html5_semantic_elements.asp">HTML Semantics</a></li>
-                    <li><a href="https://www.w3schools.com/css/css_intro.asp">CSS Basics</a></li>
-                    <li><a href="https://www.w3schools.com/css/css3_flexbox.asp">CSS Flex</a></li>
-                    <li><a href="https://www.w3schools.com/css/css_grid.asp">CSS Grid</a></li>
-                    <li><a
+                <ul class="row list-unstyled">
+                    <li class="col-sm text-center"><a href="https://www.w3schools.com/html/default.asp">HTML Basics</a>
+                    </li>
+                    <li class="col-sm text-center"><a
+                            href="https://www.w3schools.com/html/html5_semantic_elements.asp">HTML
+                            Semantics</a></li>
+                    <li class="col-sm text-center"><a href="https://www.w3schools.com/css/css_intro.asp">CSS Basics</a>
+                    </li>
+                    <li class="col-sm text-center"><a href="https://www.w3schools.com/css/css3_flexbox.asp">CSS Flex</a>
+                    </li>
+                    <li class="col-sm text-center"><a href="https://www.w3schools.com/css/css_grid.asp">CSS Grid</a>
+                    </li>
+                    <li class="col-sm text-center"><a
                             href="https://www.wix.com/blog/how-to-design-a-website#:~:text=How%20to%20design%20a%20website%201%2001.%20Set,...%207%2007.%20Design%20your%20website%20elements%20">Design
                             Principles</a></li>
 
@@ -84,6 +99,7 @@
             </address>
         </section>
     </footer>
+
 </body>
 
 </html>
